--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ember-cli-qunit": "^4.1.1",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-uglify": "^2.0.0",
+    "ember-css-modules": "^0.7.10",
     "ember-data": "~3.0.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
@@ -39,7 +40,8 @@
     "ember-resolver": "^4.0.0",
     "ember-source": "~3.0.0",
     "eslint-plugin-ember": "^5.0.0",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.2.3",
+    "normalize.css": "^8.0.0"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
