Basic version of client search using ember-power-select

--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "ember-cli-qunit": "^4.1.1",
     "ember-cli-shims": "^1.2.0",
     "ember-cli-uglify": "^2.0.0",
+    "ember-concurrency": "^0.8.17",
     "ember-css-modules": "^0.7.10",
     "ember-data": "~3.0.0",
     "ember-export-application-global": "^2.0.0",
+    "ember-fetch": "^3.4.5",
     "ember-load-initializers": "^1.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-power-select": "^2.0.0-beta.3",
     "ember-resolver": "^4.0.0",
     "ember-source": "~3.0.0",
     "eslint-plugin-ember": "^5.0.0",
